Mavenization: make compilation work on JDK9+